--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -86,7 +86,7 @@
   max-width: 100%;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   margin-right: 120px;
 }
 
